unpackaged/main/default/objects/hed__Affl_Mappings__c/fields/hed__Auto_Program_Enrollment_Role__c.field-meta.xml
<CustomField>
    <fullName>hed__Auto_Program_Enrollment_Role__c</fullName>
    <description>The role to set on the Program Enrollment record that&#39;s automatically created if Auto Program Enrollment is selected.</description>
    <inlineHelpText>The role to set on the Program Enrollment record that&#39;s automatically created if Auto Program Enrollment is selected.</inlineHelpText>
    <label>Auto Enrollment Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>